--- a/source/Sass/blocks/_projects.scss
+++ b/source/Sass/blocks/_projects.scss
@@ -6,6 +6,7 @@
     text-align: center;
     padding-left: 15%;
     padding-right: 15%;
+    padding-top: 76px;
     overflow: unset;
   }
   &__header-title {
