--- a/source/Sass/blocks/_slider.scss
+++ b/source/Sass/blocks/_slider.scss
@@ -57,6 +57,8 @@
     display: flex;
     justify-content: space-between;
     padding: 40px 62px 23px 60px;
+    z-index: 5;
+    position: relative;
   }
   &__footer-info {
     display: flex;
