--- a/source/Sass/blocks/_projects.scss
+++ b/source/Sass/blocks/_projects.scss
@@ -30,10 +30,6 @@
     flex-wrap: wrap;
     justify-content: space-between;
   }
-  &__wrapper > .lds-ring {
-    justify-content: center;
-    align-items: center;
-  }
   &__item {
     width: 30%;
     display: flex;
@@ -110,6 +106,7 @@
   position: relative;
   width: 64px;
   height: 64px;
+  align-self: center;
 }
 .lds-ring div {
   box-sizing: border-box;
@@ -118,10 +115,10 @@
   width: 51px;
   height: 51px;
   margin: 6px;
-  border: 6px solid #fed;
+  border: 6px solid #000;
   border-radius: 50%;
   animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-  border-color: #fed transparent transparent transparent;
+  border-color: #000 transparent transparent transparent;
 }
 .lds-ring div:nth-child(1) {
   animation-delay: -0.45s;
