--- a/source/Sass/blocks/_footer.scss
+++ b/source/Sass/blocks/_footer.scss
@@ -14,3 +14,27 @@
     padding-right: 71px;
   }
 }
+
+@media (max-width: $large) {
+  .page-footer {
+    &__wrapper {}
+  }
+}
+
+@media (max-width: $medium) {
+  .page-footer {
+    &__wrapper {
+      flex-direction: column;
+      align-items: center;
+      padding-left: 25px;
+      padding-right: 25px;
+  }
+  }
+}
+
+@media (max-width: $small) {
+  .page-footer {
+    &__wrapper {
+    }
+  }
+}
