--- a/source/Sass/blocks/_features.scss
+++ b/source/Sass/blocks/_features.scss
@@ -10,3 +10,12 @@
     padding-bottom: 7%;
   }
 }
+
+@media (max-width: $medium) {
+  .features {
+    &__wrapper {
+      flex-wrap: wrap;
+    }
+  }
+}
+
