styles for responsive markup for .statistics were set

--- a/source/Sass/blocks/_statistics.scss
+++ b/source/Sass/blocks/_statistics.scss
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 70px 9% 59px 13%;
+    padding: 70px 13% 59px 13%;
   }
   &__item {
     display: flex;
@@ -41,5 +41,62 @@
     line-height: 1.43;
     text-transform: uppercase;
     padding-bottom: 7px;
+    text-align: center;
+  }
+}
+
+@media (max-width: $large) {
+  .statistics {
+    &__wrapper {
+      margin-right: auto;
+      margin-left: auto;
+      justify-content: center;
+    }
+    &__item {}
+    &__item-img {
+      width: 40px;
+      height: 40px;
+    }
+    &__item-num {
+      font-size: 40px;
+    }
+    &__item-text {
+      font-size: 12px;
+    }
+  }
+}
+@media (max-width: $medium) {
+  .statistics {
+    &__wrapper {}
+    &__item {}
+    &__item-img {
+      width: 30px;
+      height: 30px;
+    }
+    &__item-num {
+      font-size: 30px;
+    }
+    &__item-text {
+      font-size: 10px;
+    }
+  }
+}
+@media (max-width: $small) {
+  .statistics {
+    &__wrapper {
+      flex-wrap: wrap;
+    }
+    &__item {
+      width: 30%;
+      margin-bottom: 38px;
+    }
+    &__item-img {
+      width: 25px;
+      height: 25px;
+    }
+    &__item-num {
+      font-size: 25px;
+    }
+    &__item-text {}
   }
 }
