--- a/source/css/style.css
+++ b/source/css/style.css
@@ -681,6 +681,41 @@ body {
     text-transform: uppercase;
     padding-bottom: 7px; }
 
+@media (max-width: 992px) {
+  .statistics__wrapper {
+    margin-right: auto;
+    margin-left: auto;
+    justify-content: center; }
+  .statistics__item-img {
+    width: 40px;
+    height: 40px; }
+  .statistics__item-num {
+    font-size: 40px; }
+  .statistics__item-text {
+    text-align: center;
+    font-size: 12px; } }
+
+@media (max-width: 768px) {
+  .statistics__item-img {
+    width: 30px;
+    height: 30px; }
+  .statistics__item-num {
+    font-size: 30px; }
+  .statistics__item-text {
+    font-size: 10px; } }
+
+@media (max-width: 576px) {
+  .statistics__wrapper {
+    flex-wrap: wrap; }
+  .statistics__item {
+    width: 30%;
+    margin-bottom: 38px; }
+  .statistics__item-img {
+    width: 25px;
+    height: 25px; }
+  .statistics__item-num {
+    font-size: 25px; } }
+
 .recent {
   display: flex;
   flex-direction: column;
