styles for responsive markup for .clients were set

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -653,7 +653,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 70px 9% 59px 13%; }
+    padding: 70px 13% 59px 13%; }
   .statistics__item {
     display: flex;
     flex-direction: column;
@@ -679,7 +679,8 @@ body {
     font-weight: 300;
     line-height: 1.43;
     text-transform: uppercase;
-    padding-bottom: 7px; }
+    padding-bottom: 7px;
+    text-align: center; }
 
 @media (max-width: 992px) {
   .statistics__wrapper {
@@ -692,7 +693,6 @@ body {
   .statistics__item-num {
     font-size: 40px; }
   .statistics__item-text {
-    text-align: center;
     font-size: 12px; } }
 
 @media (max-width: 768px) {
@@ -865,6 +865,13 @@ body {
     padding: 12% 8% 11% 6%; }
   .clients__logo {
     display: flex; }
+
+@media (max-width: 992px) {
+  .clients__wrapper {
+    padding: 7% 8% 5% 6%; }
+  .clients__logo img {
+    width: 150px;
+    height: 150px; } }
 
 .social {
   width: 100%;
