--- a/source/Sass/blocks/_clients.scss
+++ b/source/Sass/blocks/_clients.scss
@@ -20,3 +20,31 @@
     display: flex;
   }
 }
+
+@media (max-width: $large) {
+  .clients {
+    &__wrapper {
+      padding: 7% 8% 5% 6%;
+    }
+    &__logo img {
+      width: 150px;
+      height: 150px;
+    }
+  }
+}
+@media (max-width: $medium) {
+  .clients {
+    &__logo img {
+      width: 120px;
+      height: 120px;
+    }
+  }
+}
+@media (max-width: $small) {
+  .clients {
+    &__logo img {
+      width: 100px;
+      height: 100px;
+    }
+  }
+}
