--- a/source/css/style.css
+++ b/source/css/style.css
@@ -610,6 +610,41 @@ body {
     font-weight: 400;
     line-height: 1.71; }
 
+@media (max-width: 992px) {
+  .promo__wrapper {
+    padding: 9% 28% 10%; }
+  .promo__description {
+    padding-top: 37px; }
+  .promo__description-title {
+    font-size: 27px; }
+  .promo__description-text {
+    font-size: 12px; }
+  .promo__time {
+    font-size: 12px; } }
+
+@media (max-width: 768px) {
+  .promo__wrapper {
+    padding: 6% 28% 7%; }
+  .promo__description {
+    padding-top: 22px; }
+  .promo__description-title {
+    font-size: 25px; }
+  .promo__description-text {
+    font-size: 10px; }
+  .promo__time {
+    font-size: 10px; } }
+
+@media (max-width: 576px) {
+  .promo__description {
+    padding-top: 17px; }
+  .promo__description-title {
+    font-size: 19px; }
+  .promo__description-text {
+    font-size: 8px; }
+  .promo__time {
+    font-size: 9px;
+    padding-top: 0px; } }
+
 .mobile {
   display: flex;
   flex-direction: row;
@@ -872,6 +907,16 @@ body {
   .clients__logo img {
     width: 150px;
     height: 150px; } }
+
+@media (max-width: 768px) {
+  .clients__logo img {
+    width: 120px;
+    height: 120px; } }
+
+@media (max-width: 576px) {
+  .clients__logo img {
+    width: 100px;
+    height: 100px; } }
 
 .social {
   width: 100%;
