bootstrap styles for responsive markup for .projects were set, unnecessary blocks were hidden

--- a/source/Sass/blocks/_features.scss
+++ b/source/Sass/blocks/_features.scss
@@ -11,6 +11,12 @@
   }
 }
 
+@media (max-width: $large) {
+  .features {
+    display: none;
+  }
+}
+
 @media (max-width: $medium) {
   .features {
     &__wrapper {
