--- a/source/Sass/blocks/_blog.scss
+++ b/source/Sass/blocks/_blog.scss
@@ -36,3 +36,12 @@
     line-height: 1.43;
   }
 }
+@media (max-width: $large) {
+  .blog {
+    display: none;
+    &__title {}
+    &__item {}
+    &__item-date {}
+    &__item-text {}
+  }
+}
