--- a/source/Sass/blocks/_projects.scss
+++ b/source/Sass/blocks/_projects.scss
@@ -31,7 +31,6 @@
     justify-content: space-between;
   }
   &__item {
-    width: 30%;
     display: flex;
     flex-direction: column;
     align-content: center;
@@ -57,15 +56,10 @@
     width: 100%;
     height: 237px;
   }
-  &__item-img {
-    width: 100%;
-    height: 100%;
-  }
+
   &__item-info {
     width: 100%;
-    padding-top: 26px;
-    padding-bottom: 7px;
-    padding-left: 30px;
+    padding: 26px 30px 7px;
   }
   &__item-title {
     color: $menu-link-hover;
@@ -101,6 +95,7 @@
   }
 }
 
+/*
 @media (max-width: $large) {
   .projects {
     &__header {}
@@ -226,3 +221,4 @@
   }
 }
 
+*/
