--- a/source/Sass/blocks/_category.scss
+++ b/source/Sass/blocks/_category.scss
@@ -1,6 +1,6 @@
 .category {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   padding: 20px 25% 40px;
   &__item {
     background-color: transparent;
@@ -13,6 +13,8 @@
     font-weight: 500;
     line-height: 1.5;
     padding: 5px 15px;
+    margin-left: 5px;
+    margin-right: 5px;
     &:hover {
       color: $white;
       border-radius: 3px;
@@ -42,8 +44,12 @@
 
   @media (max-width: $small) {
     .category {
-      padding: 12px 15% 25px;
+      padding-top: 12px;
+      padding-bottom: 25px;
+      justify-content: center;
       &__item {
+        margin-left: 5px;
+        margin-right: 5px;
       }
     }
   }
