--- a/source/css/style.css
+++ b/source/css/style.css
@@ -411,10 +411,6 @@ body {
       color: #c7b299;
       background-color: transparent; }
 
-.projects__item-wrapper {
-  width: 100%;
-  height: 237px; }
-
 .projects__item-info {
   width: 100%;
   padding: 26px 30px 7px; }
@@ -580,7 +576,7 @@ body {
 */
 .category {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   padding: 20px 25% 40px; }
   .category__item {
     background-color: transparent;
@@ -592,7 +588,9 @@ body {
     font-size: 14px;
     font-weight: 500;
     line-height: 1.5;
-    padding: 5px 15px; }
+    padding: 5px 15px;
+    margin-left: 5px;
+    margin-right: 5px; }
     .category__item:hover {
       color: #ffffff;
       border-radius: 3px;
@@ -612,7 +610,12 @@ body {
 
 @media (max-width: 576px) {
   .category {
-    padding: 12px 15% 25px; } }
+    padding-top: 12px;
+    padding-bottom: 25px;
+    justify-content: center; }
+    .category__item {
+      margin-left: 5px;
+      margin-right: 5px; } }
 
 .promo {
   width: 100%;
