--- a/source/Sass/blocks/_category.scss
+++ b/source/Sass/blocks/_category.scss
@@ -1,7 +1,8 @@
 .category {
   display: flex;
   justify-content: center;
-  padding: 20px 25% 40px;
+  padding-top: 20px;
+  padding-bottom: 40px;
   &__item {
     background-color: transparent;
     border-radius: 3px;
@@ -34,7 +35,8 @@
 
   @media (max-width: $medium) {
     .category {
-      padding: 12px 20% 25px;
+      padding-top: 12px;
+      padding-bottom: 25px;
       &__item {
         font-size: 10px;
         padding: 2px 4px;
@@ -47,9 +49,11 @@
       padding-top: 12px;
       padding-bottom: 25px;
       justify-content: center;
+      flex-wrap: wrap;
       &__item {
         margin-left: 5px;
         margin-right: 5px;
+        margin-bottom: 5px;
       }
     }
   }
