--- a/source/css/style.css
+++ b/source/css/style.css
@@ -577,7 +577,8 @@ body {
 .category {
   display: flex;
   justify-content: center;
-  padding: 20px 25% 40px; }
+  padding-top: 20px;
+  padding-bottom: 40px; }
   .category__item {
     background-color: transparent;
     border-radius: 3px;
@@ -603,7 +604,8 @@ body {
 
 @media (max-width: 768px) {
   .category {
-    padding: 12px 20% 25px; }
+    padding-top: 12px;
+    padding-bottom: 25px; }
     .category__item {
       font-size: 10px;
       padding: 2px 4px; } }
@@ -612,7 +614,8 @@ body {
   .category {
     padding-top: 12px;
     padding-bottom: 25px;
-    justify-content: center; }
+    justify-content: center;
+    flex-wrap: wrap; }
     .category__item {
       margin-left: 5px;
       margin-right: 5px; } }
