--- a/source/Sass/blocks/_projects.scss
+++ b/source/Sass/blocks/_projects.scss
@@ -4,8 +4,8 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    padding-left: 15%;
-    padding-right: 15%;
+    padding-left: 15px;
+    padding-right: 15px;
     padding-top: 76px;
     overflow: unset;
   }
@@ -22,6 +22,7 @@
     font-weight: 500;
     line-height: 1.75;
     padding-top: 5px;
+    max-width: 760px;
   }
   &__wrapper {
     max-width: 1197px;
@@ -52,11 +53,6 @@
       }
     }
   }
-  &__item-wrapper {
-    width: 100%;
-    height: 237px;
-  }
-
   &__item-info {
     width: 100%;
     padding: 26px 30px 7px;
