.project__items were aligned

--- a/source/Sass/blocks/_projects.scss
+++ b/source/Sass/blocks/_projects.scss
@@ -53,6 +53,18 @@
       }
     }
   }
+  &__item-wrapper {
+    position: relative;
+    padding-bottom: 75%;
+    overflow: hidden;
+  }
+  &__item-img {
+    position: absolute;
+    height: 100%;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    top: 50%;
+  }
   &__item-info {
     width: 100%;
     padding: 26px 30px 7px;
