--- a/source/Sass/blocks/_page-header.scss
+++ b/source/Sass/blocks/_page-header.scss
@@ -15,3 +15,9 @@
   width: 100vw;
   background-color: rgba(27, 30, 33, 0.95);
 }
+
+@media (max-width: $large) {
+  .page-header {
+    height: 405px;
+  }
+}
