--- a/source/css/style.css
+++ b/source/css/style.css
@@ -84,6 +84,10 @@ body {
   width: 100vw;
   background-color: rgba(27, 30, 33, 0.95); }
 
+@media (max-width: 992px) {
+  .page-header {
+    height: 405px; } }
+
 .logo {
   display: flex;
   flex-direction: row;
@@ -131,9 +135,33 @@ body {
       font-size: 14px;
       font-weight: 300; }
 
+.mobile-menu__button-icon {
+  display: none; }
+
 @media (max-width: 992px) {
+  .mobile-menu__button-icon {
+    display: block;
+    width: 60px;
+    height: 60px;
+    position: absolute;
+    top: 33px;
+    right: 23px;
+    padding: 0;
+    z-index: 2;
+    background-color: transparent;
+    border: none;
+    cursor: pointer; }
   .menu {
-    display: none; } }
+    display: block;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    top: 100px;
+    right: 0;
+    left: 0; }
+    .menu__item {
+      background-color: #362f2d;
+      border: 1px solid #d1d1d1; } }
 
 .sample {
   position: absolute;
