--- a/source/css/style.css
+++ b/source/css/style.css
@@ -8,10 +8,7 @@ body {
 
 .container-fluid {
   position: relative;
-  max-width: 1230px;
-  margin-left: auto;
-  margin-right: auto;
-  overflow: hidden; }
+  max-width: 1230px; }
 
 .carousel {
   max-width: 1920px;
@@ -74,7 +71,7 @@ body {
   flex-direction: row;
   justify-content: space-around;
   z-index: 10;
-  height: 140px;
+  min-height: 140px;
   width: 100vw;
   transition: background 0.5s ease; }
 
@@ -84,10 +81,127 @@ body {
   width: 100vw;
   background-color: rgba(27, 30, 33, 0.95); }
 
-@media (max-width: 992px) {
-  .page-header {
-    height: 405px; } }
+/*
+#site-navigation {
+  z-index: 999;
+  position: relative;
+  margin-top: 0px !important;
+  width: 100%;
+  top: 0px;
+}
 
+#navigation {
+  width: 100%;
+  height: 82px !important;
+  z-index: 50;
+  transition: all 0.3s;
+  background: none;
+}
+
+#navigation-mobile {
+  padding-bottom: 8px;
+  padding-left: 20px;
+  padding-right: 20px;
+  background: #191919;
+}
+
+.nav-inner {
+  width: 100%;
+  max-width: 1180px;
+  margin: 0 auto;
+  padding: 0 35px;
+  height: 100%;
+  position: relative;
+}
+
+.logo {
+  width: auto;
+  height: auto;
+  position: relative;
+  left: 0;
+  top: 50%;
+  float: left;
+  transform: translateY(-50%);
+}
+.logo a {
+  transition: color 0.3s;
+  &:hover {
+    text-decoration: none !important;
+    outline: none;
+  }
+}
+.scroll img {
+  max-width: 100%;
+  height: auto;
+  max-height: 52px;
+  transition: opacity .3s;
+}
+.mobile-nav-buttons {
+  display: block;
+  position: absolute;
+  height: 28px;
+  background: transparent;
+  right: 35px;
+  top: 50%;
+  cursor: pointer;
+  margin-top: -15px;
+}
+.fa.fa-bars {
+  display: inline-block;
+  font-size: 28px;
+  color: #8b8b8b;
+}
+.fa.fa-bars::before {
+  content: "\f0c9";
+}
+.nav-menu {
+  float: right;
+  height: 100%;
+  z-index: 9;
+
+  top: 100%;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  !*float: none;
+  height: 0px;*!
+  overflow: hidden;
+  padding: 0px 20px;
+  background: #fff;
+}
+.nav {
+  display: block;
+  top: 0;
+  width: 100%;
+  height: auto;
+  float: none;
+}
+.menu-item {
+  display: block;
+  top: 0;
+  width: 100%;
+  float: none;
+  padding: 0;
+  clear: both;
+  position: relative;
+}
+.menu-item a {
+  display: block;
+  top: 0;
+  width: 100%;
+  height: auto;
+  line-height: 44px;
+  margin: 0px;
+  border-top: 1px solid rgba(137,137,137,0.1);
+}
+.navigation-mobile {
+  padding-bottom: 8px;
+  padding-left: 20px;
+  padding-right: 20px;
+  display: block;
+  background: #191919;
+}
+*/
 .logo {
   display: flex;
   flex-direction: row;
