--- a/source/Sass/_bootstrap-override.scss
+++ b/source/Sass/_bootstrap-override.scss
@@ -1,9 +1,6 @@
 .container-fluid {
   position: relative;
   max-width: 1230px;
-  margin-left: auto;
-  margin-right: auto;
-  overflow: hidden;
 }
 
 .carousel {
@@ -36,4 +33,16 @@
   color: $menu-link-hover;
   background-color: transparent;
   border-color: transparent;
+}
+
+@media (max-width: $extra-large) {
+  .collapse:not(.show) {
+    display: flex;
+  }
+}
+
+@media (max-width: $large) {
+  .collapse:not(.show) {
+    display: none;
+  }
 }
