scroll lock for header menu toggle script was added, issue #10

--- a/source/Sass/blocks/_menu.scss
+++ b/source/Sass/blocks/_menu.scss
@@ -29,7 +29,7 @@
    display: none;
  }
 
-@media (max-width: $large) {
+@media (max-width: $medium) {
   .mobile-menu__button-icon {
     display: block;
     width: 60px;
@@ -44,7 +44,7 @@
     cursor: pointer;
   }
   .menu {
-    display: block;
+    display: none;
     padding: 0;
     margin: 0;
     width: 100%;
