--- a/source/Sass/blocks/_page-header.scss
+++ b/source/Sass/blocks/_page-header.scss
@@ -4,7 +4,7 @@
   flex-direction: row;
   justify-content: space-around;
   z-index: 10;
-  height: 140px;
+  min-height: 140px;
   width: 100vw;
   transition: background 0.5s ease;
 }
@@ -18,6 +18,5 @@
 
 @media (max-width: $large) {
   .page-header {
-    height: 405px;
   }
 }
