--- a/source/css/style.css
+++ b/source/css/style.css
@@ -76,6 +76,9 @@ body {
 .slick-dots li button:focus::before {
   opacity: 0.5; }
 
+.slick-slide img {
+  height: auto; }
+
 .page-header {
   position: absolute;
   display: flex;
@@ -645,6 +648,10 @@ body {
       color: #ffffff;
       border-radius: 3px;
       background-color: #998675; }
+
+.active {
+  color: #ffffff;
+  background-color: #998675; }
 
 @media (max-width: 992px) {
   .category__item {
