--- a/source/Sass/blocks/_sample.scss
+++ b/source/Sass/blocks/_sample.scss
@@ -39,3 +39,48 @@
     text-decoration: none;
   }
 }
+@media (max-width: $large) {
+  .sample {
+    &__title {
+      font-size: 32px;
+    }
+    &__tagline {
+      font-size: 46px;
+    }
+    &__text {
+      font-size: 14px;
+    }
+    &__button-link {
+      padding: 12px 33px;
+    }
+  }
+}
+@media (max-width: $medium) {
+  .sample {
+    &__title {
+      font-size: 28px;
+    }
+    &__tagline {
+      font-size: 42px;
+    }
+    &__text {
+      font-size: 13px;
+    }
+  }
+}
+@media (max-width: $small) {
+  .sample {
+    &__title {
+      font-size: 25px;
+    }
+    &__tagline {
+      font-size: 36px;
+    }
+    &__text {
+      font-size: 12px;
+    }
+    &__button-link {
+      padding: 10px 28px;
+    }
+  }
+}
