--- a/source/css/style.css
+++ b/source/css/style.css
@@ -77,7 +77,7 @@ body {
   opacity: 0.5; }
 
 .slick-slide img {
-  height: auto; }
+  height: 100vh; }
 
 .page-header {
   position: absolute;
@@ -207,6 +207,34 @@ body {
     cursor: pointer;
     text-decoration: none; }
 
+@media (max-width: 992px) {
+  .sample__title {
+    font-size: 32px; }
+  .sample__tagline {
+    font-size: 46px; }
+  .sample__text {
+    font-size: 14px; }
+  .sample__button-link {
+    padding: 12px 33px; } }
+
+@media (max-width: 768px) {
+  .sample__title {
+    font-size: 28px; }
+  .sample__tagline {
+    font-size: 42px; }
+  .sample__text {
+    font-size: 13px; } }
+
+@media (max-width: 576px) {
+  .sample__title {
+    font-size: 25px; }
+  .sample__tagline {
+    font-size: 36px; }
+  .sample__text {
+    font-size: 12px; }
+  .sample__button-link {
+    padding: 10px 28px; } }
+
 .arrow-prev {
   width: 40px;
   height: 73px;
@@ -233,6 +261,11 @@ body {
   opacity: 0.5; }
   .arrow-next:hover {
     fill: #d3c1ad; }
+
+@media (max-width: 768px) {
+  .arrow-next,
+  .arrow-prev {
+    display: none; } }
 
 .features {
   display: flex;
