styles for responsive markup of slider were added #8

--- a/source/Sass/blocks/_arrow.scss
+++ b/source/Sass/blocks/_arrow.scss
@@ -29,8 +29,10 @@
   }
 }
 @media (max-width: $medium) {
-  .arrow-next,
+  .arrow-next {
+    display: none !important;
+  }
   .arrow-prev {
-    display: none;
+    display: none !important;
   }
 }
