styles for responsive markup for header were set #10

--- a/source/Sass/_bootstrap-override.scss
+++ b/source/Sass/_bootstrap-override.scss
@@ -35,6 +35,10 @@
   border-color: transparent;
 }
 
+.active {
+  background-color: transparent;
+}
+
 @media (max-width: $extra-large) {
   .collapse:not(.show) {
     display: flex;
