--- a/source/Sass/blocks/_logo.scss
+++ b/source/Sass/blocks/_logo.scss
@@ -23,6 +23,22 @@
     }
   }
 }
+
+@media (max-width: $large) {
+  .logo {
+    &__img {
+      width: 56px;
+      height: 48px;
+    }
+    &__img img {
+      width: 100%;
+      height: 100%;
+    }
+    &__trademark-link {
+      font-size: 30px;
+    }
+  }
+}
 @media (max-width: $medium) {
   .logo {
     &__trademark-link {
