--- a/source/css/style.css
+++ b/source/css/style.css
@@ -38,6 +38,9 @@ body {
   background-color: transparent;
   border-color: transparent; }
 
+.active {
+  background-color: transparent; }
+
 @media (max-width: 1200px) {
   .collapse:not(.show) {
     display: flex; } }
@@ -117,13 +120,23 @@ body {
       text-decoration: none;
       color: #ffffff; }
 
+@media (max-width: 992px) {
+  .logo__img {
+    width: 56px;
+    height: 48px; }
+  .logo__img img {
+    width: 100%;
+    height: 100%; }
+  .logo__trademark-link {
+    font-size: 30px; } }
+
 @media (max-width: 768px) {
   .logo__trademark-link {
     display: none; } }
 
 .menu {
   position: absolute;
-  top: 60px;
+  top: 53px;
   right: 15px;
   display: flex;
   flex-direction: row;
@@ -132,8 +145,8 @@ body {
     text-decoration: none;
     color: #ffffff;
     fill: #ffffff;
-    padding-right: 20px;
-    padding-left: 20px;
+    padding-right: 10px;
+    padding-left: 10px;
     font-family: Montserrat;
     font-size: 14px;
     font-weight: 300;
@@ -148,6 +161,12 @@ body {
 
 .mobile-menu__button-icon {
   display: none; }
+
+@media (max-width: 992px) {
+  .menu__item-link {
+    font-size: 10px; }
+    .menu__item-link:hover {
+      font-size: 10px; } }
 
 @media (max-width: 768px) {
   .mobile-menu__button-icon {
@@ -180,7 +199,8 @@ body {
         display: none; }
     .menu__item-link {
       padding-top: 15px;
-      padding-bottom: 15px; } }
+      padding-bottom: 15px;
+      font-size: 14px; } }
 
 .mobile-menu {
   display: flex; }
@@ -552,91 +572,6 @@ body {
   padding: 12px 43px;
   border: none; }
 
-/*
-@media (max-width: $large) {
-  .projects {
-    &__header {}
-    &__header-title {
-      font-size: 27px;
-    }
-    &__header-text {
-      font-size: 13px;
-    }
-    &__wrapper {}
-    &__item {}
-    &__item-wrapper {
-      height: 192px;
-    }
-    &__item-img {}
-    &__item-info {}
-    &__item-title {}
-    &__item-tag {}
-    &__button {}
-    &__button-link {}
-  }
-}
-
-@media (max-width: $medium) {
-  .projects {
-    &__header {}
-    &__header-title {
-      font-size: 25px;
-    }
-    &__header-text {
-      font-size: 11px;
-    }
-    &__wrapper {
-      max-width: 770px;
-      justify-content: space-around;
-    }
-    &__item {
-      width: 37%;
-    }
-    &__item-wrapper {
-    }
-    &__item-img {}
-    &__item-info {
-      padding-top: 20px;
-      padding-bottom: 5px;
-      padding-left: 20px;
-    }
-    &__item-title {
-      font-size: 16px;
-    }
-    &__item-tag {
-      font-size: 11px;
-    }
-    &__button {}
-    &__button-link {}
-  }
-}
-
-@media (max-width: $small) {
-  .projects {
-    &__header {}
-    &__header-title {
-      font-size: 23px;
-    }
-    &__header-text {}
-    &__wrapper {
-      max-width: 390px;
-      flex-direction: column;
-      align-items: center;
-      margin-left: auto;
-      margin-right: auto;
-    }
-    &__item {
-      width: 66%;
-    }
-    &__item-wrapper {}
-    &__item-img {}
-    &__item-info {}
-    &__item-title {}
-    &__item-tag {}
-    &__button {}
-    &__button-link {}
-  }
-}
 .lds-ring {
   position: relative;
   width: 100%;
@@ -646,8 +581,8 @@ body {
   align-items: center;
   background-color: white;
   opacity: 0.5;
-  margin-bottom: -62%;
-}
+  margin-bottom: -62%; }
+
 .lds-ring div {
   box-sizing: border-box;
   display: block;
@@ -658,27 +593,23 @@ body {
   border: 6px solid #000;
   border-radius: 50%;
   animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-  border-color: #000 transparent transparent transparent;
-}
+  border-color: #000 transparent transparent transparent; }
+
 .lds-ring div:nth-child(1) {
-  animation-delay: -0.45s;
-}
+  animation-delay: -0.45s; }
+
 .lds-ring div:nth-child(2) {
-  animation-delay: -0.3s;
-}
+  animation-delay: -0.3s; }
+
 .lds-ring div:nth-child(3) {
-  animation-delay: -0.15s;
-}
+  animation-delay: -0.15s; }
+
 @keyframes lds-ring {
   0% {
-    transform: rotate(0deg);
-  }
+    transform: rotate(0deg); }
   100% {
-    transform: rotate(360deg);
-  }
-}
+    transform: rotate(360deg); } }
 
-*/
 .category {
   display: flex;
   justify-content: center;
