scroll for desktop version of menu was added #10

--- a/source/Sass/_scaffoldings.scss
+++ b/source/Sass/_scaffoldings.scss
@@ -9,5 +9,11 @@ body {
 }
 
 .no-scroll {
-  overflow: hidden;
+  overflow: scroll;
 }
+  @media (max-width: 768px) {
+    .no-scroll {
+      overflow: hidden;
+    }
+  }
+
