--- a/source/css/style.css
+++ b/source/css/style.css
@@ -7,7 +7,11 @@ body {
   overflow-x: hidden; }
 
 .no-scroll {
-  overflow: hidden; }
+  overflow: scroll; }
+
+@media (max-width: 768px) {
+  .no-scroll {
+    overflow: hidden; } }
 
 .container-fluid {
   position: relative;
