hover effects for mobile menu were added #10

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -204,7 +204,9 @@ body {
     .menu__item-link {
       padding-top: 15px;
       padding-bottom: 15px;
-      font-size: 14px; } }
+      font-size: 14px; }
+      .menu__item-link:hover {
+        font-size: 14px; } }
 
 .mobile-menu {
   display: flex; }
