--- a/source/Sass/blocks/_menu.scss
+++ b/source/Sass/blocks/_menu.scss
@@ -77,6 +77,9 @@
       padding-top: 15px;
       padding-bottom: 15px;
       font-size: 14px;
+      &:hover {
+        font-size: 14px;
+      }
     }
   }
 }
