--- a/source/Sass/blocks/_sample.scss
+++ b/source/Sass/blocks/_sample.scss
@@ -1,3 +1,4 @@
+/*
 .sample {
   position: absolute;
   max-width: 600px;
@@ -7,6 +8,7 @@
   align-content: center;
   margin-right: auto;
   margin-left: auto;
+  background-color: #4e555b;
   &__title {
     font-family: Raleway;
     font-size: 36px;
@@ -84,3 +86,4 @@
     }
   }
 }
+*/
