--- a/source/css/style.css
+++ b/source/css/style.css
@@ -215,34 +215,39 @@ body {
   .mobile-menu {
     display: block; } }
 
+/*
 .sample {
   position: absolute;
   max-width: 600px;
-  color: #ffffff;
+  color: $white;
   display: flex;
   flex-direction: column;
   align-content: center;
   margin-right: auto;
-  margin-left: auto; }
-  .sample__title {
+  margin-left: auto;
+  background-color: #4e555b;
+  &__title {
     font-family: Raleway;
     font-size: 36px;
-    font-weight: 500; }
-  .sample__tagline {
+    font-weight: 500;
+  }
+  &__tagline {
     font-family: Raleway;
     font-size: 52px;
-    font-weight: 700; }
-  .sample__text {
+    font-weight: 700;
+  }
+  &__text {
     font-family: Montserrat;
     font-size: 16px;
     font-weight: 300;
-    line-height: 1.5; }
-  .sample__button-link {
+    line-height: 1.5;
+  }
+  &__button-link {
     box-shadow: inset 0 -3px 0 #736357;
     border-radius: 3px;
     border: 0;
     background-color: #998675;
-    color: #ffffff;
+    color: $white;
     font-family: Raleway;
     font-size: 14px;
     font-weight: 400;
@@ -250,36 +255,55 @@ body {
     text-transform: uppercase;
     padding: 15px 38px;
     cursor: pointer;
-    text-decoration: none; }
-
-@media (max-width: 992px) {
-  .sample__title {
-    font-size: 32px; }
-  .sample__tagline {
-    font-size: 46px; }
-  .sample__text {
-    font-size: 14px; }
-  .sample__button-link {
-    padding: 12px 33px; } }
-
-@media (max-width: 768px) {
-  .sample__title {
-    font-size: 28px; }
-  .sample__tagline {
-    font-size: 42px; }
-  .sample__text {
-    font-size: 13px; } }
-
-@media (max-width: 576px) {
-  .sample__title {
-    font-size: 25px; }
-  .sample__tagline {
-    font-size: 36px; }
-  .sample__text {
-    font-size: 12px; }
-  .sample__button-link {
-    padding: 10px 28px; } }
-
+    text-decoration: none;
+  }
+}
+@media (max-width: $large) {
+  .sample {
+    &__title {
+      font-size: 32px;
+    }
+    &__tagline {
+      font-size: 46px;
+    }
+    &__text {
+      font-size: 14px;
+    }
+    &__button-link {
+      padding: 12px 33px;
+    }
+  }
+}
+@media (max-width: $medium) {
+  .sample {
+    &__title {
+      font-size: 28px;
+    }
+    &__tagline {
+      font-size: 42px;
+    }
+    &__text {
+      font-size: 13px;
+    }
+  }
+}
+@media (max-width: $small) {
+  .sample {
+    &__title {
+      font-size: 25px;
+    }
+    &__tagline {
+      font-size: 36px;
+    }
+    &__text {
+      font-size: 12px;
+    }
+    &__button-link {
+      padding: 10px 28px;
+    }
+  }
+}
+*/
 .arrow-prev {
   width: 40px;
   height: 73px;
