--- a/source/Sass/_header-slick-override.scss
+++ b/source/Sass/_header-slick-override.scss
@@ -33,6 +33,15 @@
   opacity: 0.5;
 }
 
-.slick-slide img {
-  height: 100vh;
+.carousel-item {
+  &:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background: rgba(0, 0, 0, 0.7);
+  }
 }
