--- a/source/css/style.css
+++ b/source/css/style.css
@@ -83,8 +83,15 @@ body {
 .slick-dots li button:focus::before {
   opacity: 0.5; }
 
-.slick-slide img {
-  height: 100vh; }
+.carousel-item:after {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background: rgba(0, 0, 0, 0.7); }
 
 .page-header {
   position: absolute;
