styles for .sample were changed #10

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -224,6 +224,9 @@ body {
 
 .sample {
   position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
   max-width: 600px;
   color: #ffffff;
   display: flex;
