--- a/source/Sass/blocks/_statistics.scss
+++ b/source/Sass/blocks/_statistics.scss
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 70px 13% 59px 13%;
+    padding: 70px 100px 59px 100px;
   }
   &__item {
     display: flex;
