--- a/source/Sass/blocks/_category.scss
+++ b/source/Sass/blocks/_category.scss
@@ -24,30 +24,13 @@
   }
 }
 
-@media (max-width: $large) {
-  .category {
-    &__item {
-      font-size: 12px;
-      padding: 2px 5px;
-    }
-  }
+.active {
+  color: $white;
+  background-color: #998675;
 }
-
-  @media (max-width: $medium) {
-    .category {
-      padding-top: 12px;
-      padding-bottom: 25px;
-      &__item {
-        font-size: 10px;
-        padding: 2px 4px;
-      }
-    }
-  }
 
   @media (max-width: $small) {
     .category {
-      padding-top: 12px;
-      padding-bottom: 25px;
       justify-content: center;
       flex-wrap: wrap;
       &__item {
