responsive markup for .recent block using bootstrap was added #8

--- a/source/Sass/blocks/_recent.scss
+++ b/source/Sass/blocks/_recent.scss
@@ -27,7 +27,8 @@
   }
   &__wrapper {
     display: flex;
-    justify-content: space-around;
+    flex-wrap: wrap;
+    justify-content: center;
     padding-bottom: 37px;
   }
   &__button {
