--- a/source/Sass/blocks/_post.scss
+++ b/source/Sass/blocks/_post.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   border: 1px solid #f8f8f8;
   cursor: pointer;
+  margin-bottom: 10px;
   &:hover {
     text-decoration: none;
     background-color: #362f2d;
@@ -63,9 +64,7 @@
   &__body {
     display: flex;
     flex-direction: column;
-    padding-top: 25px;
-    padding-left: 29px;
-    padding-bottom: 28px;
+    padding: 25px 29px 28px;
   }
   &__title {
     color: #555555;
